--- a/Notebooks/EDA_Acc_vel_loc_sinrangos.ipynb
+++ b/Notebooks/EDA_Acc_vel_loc_sinrangos.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "#Veo cada hoja del archivo excel \"internet.xlsx\" con pandas.\n",
-    "df = pd.read_excel(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\Internet.xlsx', sheet_name=\"Velocidad_sin_Rangos\")"
+    "df = pd.read_excel(r'Datasets/Internet.xlsx', sheet_name=\"Velocidad_sin_Rangos\")"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\Acc_vel_loc_sinrangos.csv', sep=';')"
+    "df = pd.read_csv(r'Datasets/Acc_vel_loc_sinrangos.csv', sep=';')"
    ]
   },
   {
