Update EDA_Accesos Por Tecnologia.ipynb

--- a/Notebooks/EDA_Accesos Por Tecnologia.ipynb
+++ b/Notebooks/EDA_Accesos Por Tecnologia.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\Totales Accesos Por Tecnología.csv', decimal='.')"
+    "df = pd.read_csv(r'Datasets/Totales Accesos Por Tecnología.csv', decimal='.')"
    ]
   },
   {
