Update EDA_Accesos por rangos.ipynb

--- a/Notebooks/EDA_Accesos por rangos.ipynb
+++ b/Notebooks/EDA_Accesos por rangos.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\Accesos por rangos.csv')"
+    "df = pd.read_csv(r'Datasets/Accesos por rangos.csv')"
    ]
   },
   {
