--- a/Notebooks/EDA_Ingresos.ipynb
+++ b/Notebooks/EDA_Ingresos.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\Ingresos.csv')"
+    "df = pd.read_csv(r'Datasets/Ingresos.csv')"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "outputs": [],
    "source": [
     "# Leo todas las hojas del archivo Excel en un diccionario de DataFrames\n",
-    "archivo_excel = pd.read_excel(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\Valor historico dolar 2014-2024.xlsx', sheet_name=None)"
+    "archivo_excel = pd.read_excel(r'Datasets/Valor historico dolar 2014-2024.xlsx', sheet_name=None)"
    ]
   },
   {
@@ -609,7 +609,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\precios_promedio_dolar_trimestre.csv')"
+    "df1 = pd.read_csv(r'Datasets/precios_promedio_dolar_trimestre.csv')"
    ]
   },
   {
@@ -824,8 +824,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "archivo1 = pd.read_csv(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\Ingresos_limpio.csv')\n",
-    "archivo2 = pd.read_csv(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\precios_promedio_dolar_trimestre.csv')\n",
+    "archivo1 = pd.read_csv(r'Datasets/Ingresos_limpio.csv')\n",
+    "archivo2 = pd.read_csv(r'Datasets/precios_promedio_dolar_trimestre.csv')\n",
     "\n",
     "# Realizo el merge de los archivos en base a las columnas 'Año' y 'Trimestre'\n",
     "df_concatenado = pd.merge(archivo1, archivo2, on=['Año', 'Trimestre'])\n",
