--- a/Notebooks/EDA_penetracion-hogares-hab.ipynb
+++ b/Notebooks/EDA_penetracion-hogares-hab.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\Penetracion-hogares.csv')"
+    "df1 = pd.read_csv(r'Datasets/Penetracion-hogares.csv')"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = pd.read_csv(r'C:\\Users\\nahue\\Searches\\Escritorio\\CARRERA HENRY\\SPI\\Segundo_proyecto_individual\\Datasets\\Penetración-poblacion.csv')"
+    "df2 = pd.read_csv(r'Datasets/Penetración-poblacion.csv')"
    ]
   },
   {
