Update EDA_Accesos por rangos.ipynb

--- a/Notebooks/EDA_Accesos por rangos.ipynb
+++ b/Notebooks/EDA_Accesos por rangos.ipynb
@@ -1417,20 +1417,20 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Reorganizar el dataframe para la visualización de barras apiladas\n",
+    "# Reorganizo el dataframe para la visualización de barras apiladas\n",
     "df_stacked = df.melt(id_vars=['Año', 'Provincia'], value_vars=['HASTA 512 kbps', '+ 512 Kbps - 1 Mbps', '+ 1 Mbps - 6 Mbps', '+ 6 Mbps - 10 Mbps', '+ 10 Mbps - 20 Mbps', '+ 20 Mbps - 30 Mbps', '+ 30 Mbps'], var_name='Rango de Velocidad', value_name='Accesos')\n",
     "\n",
-    "# Eliminar filas con valores nulos\n",
+    "# Elimino filas con valores nulos\n",
     "df_stacked = df_stacked.dropna(subset=['Accesos'])\n",
     "\n",
-    "# Crear un gráfico de barras apiladas\n",
+    "# Creo un gráfico de barras apiladas\n",
     "plt.figure(figsize=(14, 8))\n",
     "\n",
-    "# Crear barras apiladas utilizando pandas pivot table\n",
+    "# Creo barras apiladas utilizando pandas pivot table\n",
     "df_pivot = df_stacked.pivot_table(index='Provincia', columns='Rango de Velocidad', values='Accesos', aggfunc='sum')\n",
     "df_pivot.plot(kind='bar', stacked=True, figsize=(14, 8))\n",
     "\n",
-    "# Ajustar el gráfico\n",
+    "# Ajusto el gráfico\n",
     "plt.title('Comparación de Provincias por Rangos de Velocidad')\n",
     "plt.xlabel('Provincia')\n",
     "plt.ylabel('Cantidad de Accesos')\n",
@@ -1438,7 +1438,7 @@
     "plt.legend(title='Rango de Velocidad')\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Mostrar el gráfico\n",
+    
     "plt.show()\n",
     "\n"
    ]
